<resources>
    <string name="stageSelect">Stage selection</string>
    <string name="remainingBricks">Remaining bricks</string>
    <string name="fourLines">4 lines with a chip</string>
    <string name="clock">Timer</string>
    <string name="app_name">Tetromino puzzle</string>
    <string name="score">Score</string>
    <string name="lines">Lines</string>
    <string name="level">Speed</string>
    <string name="newGame">New Game</string>
    <string name="classicGame">Classic</string>
    <string name="challengeGame">Challenge</string>
    <string name="easyChallenge">Easy</string>
    <string name="hardChallenge">Hard</string>
    <string name="bestPlayers">Top Players</string>
    <string name="name">Name</string>
    <string name="record">Record</string>
    <string name="next">Next</string>
    <string name="gamePaused">Paused Game</string>
    <string name="saveScore">Save Score</string>
    <string name="continueGame">Continue</string>
    <string name="restartGame">Restart</string>
    <string name="exitGame">Exit</string>
    <string name="couldntget">It could not be get</string>
    <string name="endGame">Game Over</string>
    <string name="wantToFinishGame">Are you sure you want to finish the game?</string>
    <string name="wantToFinishStage">Are you sure you want to leave the stage?</string>
    <string name="backToSelectStage">Go back to Select stage screen</string>
    <string name="cancel">Cancel</string>
    <string name="endGameAndRestart">Finish game and start a new one?</string>
    <string name="noName">Name does not entered</string>
    <string name="resultSaved">Result saved correctly</string>
    <string name="resultNotSaved">Error, you can try again</string>
    <string name="serverConnectionError">Error connecting to server, check your data connection</string>
    <string name="gameOver">Game Over</string>
    <string name="wannaClose">Do you want to close Tetromino puzzle?</string>

    <string name="level1">Stage 1: complete 25 lines</string>
    <string name="level2">Stage 2: remove all gray bricks. Rows: 5, missing bricks per row: 1</string>
    <string name="level3">Stage 3: complete 10 lines in 2 minutes</string>
    <string name="level4">Stage 4: remove all gray bricks. Rows: 10, missing bricks per row: 1</string>
    <string name="level5">Stage 5: reach 10000 points</string>
    <string name="level6">Stage 6: remove all gray bricks. Rows: 5, missing bricks per row: 2</string>
    <string name="level7">Stage 7: complete 20 lines in 4 minutes</string>
    <string name="level8">Stage 8: reach 15000 points</string>
    <string name="level9">Stage 9: complete 50 lines</string>
    <string name="level10">Stage 10: hang on for 3 minutes starting at speed 10</string>
    <string name="level11">Stage 11: remove all gray bricks. Rows: 10, missing bricks per row: 2</string>
    <string name="level12">Stage 12: complete 30 lines in 6 minutes</string>
    <string name="level13">Stage 13: remove all gray bricks. Rows: 5, missing bricks per row: 3</string>
    <string name="level14">Stage 14: hang on for 5 minutes starting at speed 6</string>
    <string name="level15">Stage 15: complete 40 lines in 8 minutes</string>
    <string name="level16">Stage 16: remove all gray bricks. Rows: 10, missing bricks per row: 3</string>
    <string name="level17">Stage 17: complete 75 lines</string>
    <string name="level18">Stage 18: hang on for 10 minutes starting at speed 5</string>
    <string name="level19">Stage 19: for every 1 lines or more you complete, you increase the speed by 1, reach speed 13</string>
    <string name="level20">Stage 20: complete 4 lines with a single chip in 4 opportunities</string>
    <string name="level21">Stage 21: hang on for 5 minutes starting at speed 6</string>
    <string name="level22">Stage 22: reach 20000 points</string>
    <string name="level23">Stage 23: remove all gray bricks. Rows: 5, missing bricks per row: 4</string>
    <string name="level24">Stage 24: remove all gray bricks. Rows: 10, missing bricks per row: 4</string>
    <string name="level25">Stage 25: complete 100 lines</string>
    <string name="level26">Stage 26: the Left and Right arrows work in reverse, complete 50 lines</string>
    <string name="level27">Stage 27: por cada 3 líneas que completes se aumentará en 1 la velocidad, alcanza la velocidad 11</string>
    <string name="level28">Stage 28: remove all gray bricks. Rows: 5, missing bricks per row: 5</string>
    <string name="level29">Stage 29: complete 50 lines in 10 minutes</string>
    <string name="level30">Stage 30: remove all gray bricks. Rows: 5, missing bricks per row: 6</string>
    <string name="level31">Stage 31: complete 60 lines in 12 minutes</string>
    <string name="level32">Stage 32: complete 4 lines with a single chip in 10 opportunities</string>
    <string name="level33">Stage 33: reach 25000 points</string>
    <string name="level34">Stage 34: remove all gray bricks. Rows: 10, missing bricks per row: 5</string>
    <string name="level35">Stage 35: remove all gray bricks. Rows: 5, missing bricks per row: 7</string>
    <string name="level36">Stage 36: complete 70 lines in 14 minutes</string>
    <string name="level37">Stage 37: complete 125 lines</string>
    <string name="level38">Stage 38: remove all gray bricks. Rows: 10, missing bricks per row: 6</string>
    <string name="level39">Stage 39: reach 30000 points</string>
    <string name="level40">Stage 40: for every 5 lines or more you complete, you increase the speed by 1, reach speed 10</string>
    <string name="level41">Stage 41: remove all gray bricks. Rows: 10, missing bricks per row: 7</string>
    <string name="level42">Stage 42: complete 80 lines in 16 minutes</string>
    <string name="level43">Stage 43: reach 35000 points</string>
    <string name="level44">Stage 44: remove all gray bricks. Rows: 5, missing bricks per row: 8</string>
    <string name="level45">Stage 45: complete 150 lines</string>
    <string name="level46">Stage 46: complete 90 lines in 18 minutes</string>
    <string name="level47">Stage 47: remove all gray bricks. Rows: 10, missing bricks per row: 8</string>
    <string name="level48">Stage 48: remove all gray bricks. Rows: 5, missing bricks per row: 9</string>
    <string name="level49">Stage 49: complete 100 lines in 20 minutes</string>
    <string name="level50">Stage 50: remove all gray bricks. Rows: 10, missing bricks per row: 9</string>
    <string name="level51">Stage 51: remove all gray bricks.</string>
    <string name="level52">Stage 52: remove all gray bricks. Rows: 15, missing bricks per row: 1</string>
    <string name="level53">Stage 53: remove all gray bricks. Rows: 15, missing bricks per row: 2</string>
    <string name="level54">Stage 54: remove all gray bricks. Rows: 15, missing bricks per row: 3</string>
    <string name="level55">Stage 55: remove all gray bricks.</string>
    <string name="level56">Stage 56: remove all gray bricks. Rows: 15, missing bricks per row: 4</string>
    <string name="level57">Stage 57: remove all gray bricks. Rows: 15, missing bricks per row: 5</string>
    <string name="level58">Stage 58: remove all gray bricks. Rows: 15, missing bricks per row: 6</string>
    <string name="level59">Stage 59: remove all gray bricks.</string>
    <string name="level60">Stage 60: remove all gray bricks. Rows: 15, missing bricks per row: 7</string>
    <string name="level61">Stage 61: remove all gray bricks. Rows: 15, missing bricks per row: 8</string>
    <string name="level62">Stage 62: remove all gray bricks. Rows: 15, missing bricks per row: 9</string>
    <string name="level63">Stage 63: remove all gray bricks.</string>

    <string name="restartStage">Restart stage?</string>
    <string name="hello">Hi</string>
    <string name="interstitial_id"> ca-app-pub-2546138435705366/3464336337</string>
    <string name="serverError">Internal error, log out and try again later</string>
    <string name="start">Start</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>
    <string name="rotate">ROTATE</string>
    <string name="pause">PAUSE</string>
    <string name="repeat">Replay stage</string>
    <string name="retry">Retry</string>
    <string name="mainGame">Campaign</string>
    <string name="facebook_app_id">1772661153614888</string>
    <string name="whyFacebookLogin">Why log in with Facebook?</string>
    <string name="noFacebookLogin">Continue whitout log in with Facebook</string>
    <string name="facebookLoginCancel">Log in with Facebook cancelled</string>
    <string name="facebookLoginError">Log in with Facebook error, you can try again</string>
    <string name="logOut">Log out</string>
    <string name="title_activity_initial_screen">InitialScreenActivity</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="whyFBLoginLine1">- It will allow you to automatically save the score obtained in Classic and Challenge
    modes in a common table to Tetromino puzzle players from around the world. This table can be seen from the button Top Players.</string>
    <string name="whyFBLoginLine2">- It will prevent you from losing Campaign mode advances, even if you uninstall and
    reinstall Tetromino puzzle.</string>
    <string name="goBack">Go back</string>
    <string name="continueWithoutFBLogin">Your progress will be lost if you uninstall Tetromino puzzle, continue without
    logging in with Facebook?</string>
</resources>
